[package]
name = "csskit"
version = "0.0.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
css_lexer = { workspace = true }
css_ast = { workspace = true }
css_parse = { workspace = true }
csskit_lsp = { workspace = true }

clap = { workspace = true, features = ["derive", "cargo"] }
miette = { workspace = true }

bumpalo = { workspace = true, features = ["collections", "boxed"] }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["fancy"]
serde = ["dep:serde", "dep:serde_json", "css_lexer/serde"] 
fancy = ["css_ast/fancy", "css_parse/fancy", "miette/fancy"]

[[bin]]
name = "csskit"
path = "src/main.rs"
bench = false
