[package]
name = "csskit_highlight"
version = "0.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
css_ast = { workspace = true }
css_lexer = { workspace = true }

bitmask-enum = { workspace = true }
strum = { workspace = true, features = ["derive"] }

[dev-dependencies]
css_parse = { workspace = true }
bumpalo = { workspace = true }
insta = { workspace = true, features = ["json"] }
similar = { workspace = true }
console = { workspace = true }
