[package]
name = "hdx"
version = "0.0.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hdx_lexer = { workspace = true }
hdx_syntax = { workspace = true }
hdx_ast = { workspace = true }
hdx_parser = { workspace = true }
hdx_atom = { workspace = true }
hdx_lsp = { workspace = true }

clap = { workspace = true, features = ["derive", "cargo"] }
miette = { workspace = true }

bumpalo = { workspace = true, features = ["collections", "boxed"] }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["fancy"]
serde = ["dep:serde", "dep:serde_json", "hdx_lexer/serde"] 
fancy = ["hdx_ast/fancy", "hdx_parser/fancy", "miette/fancy"]

[[bin]]
name = "hdx"
path = "src/main.rs"
bench = false
