[package]
name = "hdx_ast"
version = "0.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hdx_lexer = { workspace = true }
hdx_syntax = { workspace = true }
hdx_atom = { workspace = true }
hdx_parser = { workspace = true }
hdx_writer = { workspace = true }
hdx_derive = { workspace = true }

# Use OXC Allocator until https://github.com/fitzgen/bumpalo/pull/210 is resolved
oxc_allocator = { workspace = true }
bumpalo = { workspace = true, features = ["collections", "boxed"] }
miette = { workspace = true, features = ["derive"] }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

bitmask-enum = { workspace = true }

[dev-dependencies]
glob = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "hdx_lexer/serde"]
