[package]
name = "hdx_ast"
version = "0.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
hdx_lexer = { workspace = true }
hdx_syntax = { workspace = true }
hdx_atom = { workspace = true }
hdx_parser = { workspace = true }
hdx_writer = { workspace = true }
hdx_derive = { workspace = true }

bumpalo = { workspace = true, features = ["collections", "boxed"] }
miette = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

bitmask-enum = { workspace = true }

[dev-dependencies]
glob = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }
insta = { workspace = true, features = ["json"] }
similar = { workspace = true }
console = { workspace = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "hdx_atom/serde", "hdx_parser/serde", "hdx_lexer/serde", "smallvec/serde"]
fancy = ["miette/fancy-no-backtrace"]

[[bench]]
name = "parse_popular"
harness = false
