[package]
name = "hdx_ast"
version = "0.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
hdx_lexer = { workspace = true }
hdx_atom = { workspace = true }
hdx_parser = { workspace = true }
hdx_derive = { workspace = true }
hdx_proc_macro = { workspace = true }

bumpalo = { workspace = true, features = ["collections", "boxed"] }
miette = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

bitmask-enum = { workspace = true }

[build-dependencies]
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
grep-matcher = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
glob = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
insta = { workspace = true, features = ["json"] }
similar = { workspace = true }
console = { workspace = true }

[target.'cfg(target_family = "unix")'.dev-dependencies]
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "hdx_atom/serde", "hdx_parser/serde", "hdx_lexer/serde", "smallvec/serde"]
fancy = ["miette/fancy-no-backtrace"]

[[bench]]
name = "parse_popular"
harness = false
