[package]
name = "hdx_atom"
version = "0.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hdx_syntax.workspace = true

string_cache = { workspace = true }

serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

[build-dependencies]
string_cache_codegen = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
grep-matcher = { workspace = true }
glob = { workspace = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
