[package]
name = "hdx_atomizable_derive"
version = "0.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
hdx_atom.workspace = true

syn = { workspace = true, features = ["extra-traits"] }
quote = { workspace = true }

[features]
default = []
