[package]
name = "hdx_highlight"
version = "0.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hdx_ast = { workspace = true }
hdx_lexer = { workspace = true }
bitmask-enum = { workspace = true }

[dev-dependencies]
hdx_parser = { workspace = true }
bumpalo = { workspace = true }
insta = { workspace = true, features = ["json"] }
similar = { workspace = true }
console = { workspace = true }
