[package]
name = "hdx_lexer"
version = "0.0.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hdx_syntax.workspace = true
hdx_atom.workspace = true

bumpalo = { workspace = true, features = ["boxed", "collections"] }
bitmask-enum = { workspace = true }

miette = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
smallvec = { workspace = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "bumpalo/serde"]
