[package]
name = "hdx_lexer"
version = "0.0.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
hdx_syntax.workspace = true
hdx_atom.workspace = true

bumpalo = { workspace = true, features = ["boxed", "collections"] }
bitmask-enum = { workspace = true }

miette = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
smallvec = { workspace = true }

[dev-dependencies]
glob = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }
insta = { workspace = true, features = ["json"] }
similar = { workspace = true }
console = { workspace = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "bumpalo/serde"]

[[bench]]
name = "lex_popular"
harness = false
