[package]
name = "hdx_parser"
version = "0.0.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hdx_lexer = { workspace = true }
hdx_syntax = { workspace = true }
hdx_atom = { workspace = true }

closestmatch = { workspace = true }

# Use OXC Allocator until https://github.com/fitzgen/bumpalo/pull/210 is resolved
oxc_allocator = { workspace = true }
bumpalo = { workspace = true }

miette = { workspace = true }
thiserror = { workspace = true }
bitmask-enum = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
glob = { workspace = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "hdx_lexer/serde"]
fancy = ["miette/fancy-no-backtrace"]
