[package]
name = "hdx_proc_macro"
version = "0.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false
proc-macro = true

[dependencies]
hdx_atom.workspace = true
hdx_lexer.workspace = true

syn = { workspace = true, features = ["extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
prettyplease = { workspace = true }
insta = { workspace = true, features = ["json"] }

[features]
default = []
