[package]
name = "hdx_transform"
version = "0.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
hdx_ast = { workspace = true }

[dev-dependencies]
hdx_writer = { workspace = true }
hdx_parser = { workspace = true }
glob = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

bumpalo = { workspace = true }

[features]
default = []

[[bench]]
name = "minify_popular"
harness = false
