[package]
name = "hdx_wasm"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "fancy", "serde"]
serde = ["hdx_lexer/serde", "hdx_ast/serde", "hdx_parser/serde"]
fancy = ["hdx_parser/fancy", "miette/fancy-no-backtrace"]

[dependencies]
hdx_lexer = { workspace = true }
hdx_ast = { workspace = true }
hdx_parser = { workspace = true }
hdx_writer = { workspace = true }

# Use OXC Allocator until https://github.com/fitzgen/bumpalo/pull/210 is resolved
oxc_allocator = { workspace = true }

miette = { workspace = true }
serde = { workspace = true, features = ["derive"] }

wasm-bindgen = { version = "0.2.87" }
serde-wasm-bindgen = "0.5.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
