[package]
name = "hdx_writer"
version = "0.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
hdx_lexer = { workspace = true }
hdx_atom = { workspace = true }
hdx_parser = { workspace = true }
hdx_syntax = { workspace = true }

bumpalo = { workspace = true }
bitmask-enum = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
hdx_parser = { workspace = true }

[features]
default = []
