[package]
name = "hdx_coverage"
version = "0.0.0"
publish = false
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hdx_lexer = { workspace = true, features = ["serde"] }
hdx_parser = { workspace = true, features = ["serde"] }

# Use OXC Allocator until https://github.com/fitzgen/bumpalo/pull/210 is resolved
oxc_allocator = { workspace = true }

miette = { workspace = true, features = ["fancy-no-backtrace"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

glob = { workspace = true }
pico-args = { workspace = true }
project-root = { workspace = true }
similar = { workspace = true }

cssparser = "0.31.2"
console = "0.15.7"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
serde_yaml = "0.9.21"
